<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess Client</string>
    <string name="action_settings">Settings</string>
    <string name="server_address">Server Address:</string>
    <string name="default_server_address">
        http://192.168.1.162:8080/Server/chess/
    </string>
    <string name="uesrname">Username:</string>
    <string name="login">Login</string>
    <string name="seek">Seek</string>
    <string name="resign">Resign</string>
    <string name="offer_draw">Offer draw</string>
    <string name="accept_draw">Accept draw</string>
    <string name="decline_draw">Decline draw</string>
    <string name="withdraw_draw_offer">Withdraw draw offer</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="square_background">Square background</string>
    <string name="piece_image">Piece image</string>
    <string name="player_name_placeholder">(no player)</string>
    <string name="game_ended">Game ended</string>
    <string name="ok">OK</string>
    <string name="active_player_marker">➟</string>

    <string name="white_to_move">White to move</string>
    <string name="black_to_move">Black to move</string>
    <string name="white_checked">White checked</string>
    <string name="black_checked">Black checked</string>
    <string name="black_checkmated">Black checkmated</string>
    <string name="black_resigned">Black resigned</string>
    <string name="black_clock_expired">Black clock expired</string>
    <string name="white_checkmated">White checkmated</string>
    <string name="white_resigned">White resigned</string>
    <string name="white_clock_expired">White clock expired</string>
    <string name="black_stalemated">Black stalemated</string>
    <string name="white_stalemated">White stalemated</string>
    <string name="insufficient_material">Insufficient material</string>
    <string name="halfmove_clock_expired">Halfmove clock expired</string>
    <string name="threefold_repetition">Threefold repetition</string>
    <string name="draw_by_agreement">Draw by agreement</string>

    <string name="seeking_an_opponent">Seeking an opponent&#8230;</string>
    <string name="seek_error_message">Seek found no match.</string>
    <string name="resign_failed">Failed to send resignation.</string>
    <string name="draw_offer_failed">Failed to offer or accept draw.</string>
    <string name="draw_decline_failed">Failed to decline draw offer.</string>
    <string name="enter_user_name">Please enter a username.</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="login_failed">Login failed.</string>
    <string name="move_failed">Failed to send move.</string>
    
    <string name="outstanding_draw_offer">Wating for other player to respond to draw offer.</string>
    <string name="offered_draw">offered draw.</string>
</resources>
