<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gilran.chess.android.GameActivity" >

    <item
        android:id="@+id/action_seek"
        android:orderInCategory="100"
        android:title="@string/seek"/>
    <item
        android:id="@+id/action_resign"
        android:orderInCategory="100"
        android:title="@string/resign"/>
    <item
        android:id="@+id/action_draw"
        android:orderInCategory="100"
        android:title="@string/offer_draw"/>
    <item
        android:id="@+id/action_accept_draw"
        android:orderInCategory="100"
        android:title="@string/accept_draw"/>
    <item
        android:id="@+id/action_decline_draw"
        android:orderInCategory="100"
        android:title="@string/decline_draw"/>

</menu>
